--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -69,12 +69,12 @@ jobs:
   Continuous-Deployment:
     needs: Continuous-Integration
     runs-on: ubuntu-latest
-    environment: production  # Add environment protection
-    
+    environment: production
+  
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+  
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -82,56 +82,38 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
           mask-aws-account-id: false
-
+  
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Stop existing container
-        run: |
-          # Check if container exists and stop/remove it
-          if docker ps -a --format "table {{.Names}}" | grep -q "^medical-chatbot$"; then
-            echo "Stopping existing medical-chatbot container..."
-            docker stop medical-chatbot || true
-            echo "Removing existing medical-chatbot container..."
-            docker rm medical-chatbot || true
-          else
-            echo "No existing medical-chatbot container found."
-          fi
-        continue-on-error: true
-
-      - name: Run Docker Image to serve users
-        run: |
-          # Validate that the image reference is not empty
-          IMAGE_REF="${{ needs.Continuous-Integration.outputs.image }}"
-          if [ -z "$IMAGE_REF" ]; then
-            echo "ERROR: Image reference is empty. Check the Continuous-Integration job outputs."
-            echo "Available outputs:"
-            echo "  image: ${{ needs.Continuous-Integration.outputs.image }}"
-            echo "  image-digest: ${{ needs.Continuous-Integration.outputs.image-digest }}"
-            exit 1
-          fi
-          
-          # Debug output
-          echo "Image reference: $IMAGE_REF"
-          
-          # Run the container
-          docker run -d \
-            --name medical-chatbot \
-            --restart unless-stopped \
-            -e AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
-            -e AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
-            -e AWS_DEFAULT_REGION="${{ secrets.AWS_DEFAULT_REGION }}" \
-            -e PINECONE_API_KEY="${{ secrets.PINECONE_API_KEY }}" \
-            -e OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}" \
-            -p 8080:8080 \
-            "$IMAGE_REF"
-
-      - name: Verify deployment
-        run: |
-          # Wait for the container to start
-          sleep 30
-          # Check if container is running
-          docker ps | grep medical-chatbot
-          # Basic health check (adjust URL as needed)
-          curl -f http://localhost:8080/ || exit 1
+  
+      - name: Deploy on EC2 via SSH
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            echo "Logging into ECR..."
+            aws ecr get-login-password --region ${{ secrets.AWS_DEFAULT_REGION }} | docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
+  
+            echo "Stopping old container if exists..."
+            if [ "$(docker ps -q -f name=medical-chatbot)" ]; then
+              docker stop medical-chatbot && docker rm medical-chatbot
+            fi
+  
+            echo "Running new container..."
+            docker run -d \
+              --name medical-chatbot \
+              --restart unless-stopped \
+              -e AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
+              -e AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+              -e AWS_DEFAULT_REGION="${{ secrets.AWS_DEFAULT_REGION }}" \
+              -e PINECONE_API_KEY="${{ secrets.PINECONE_API_KEY }}" \
+              -e OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}" \
+              -p 8080:8080 \
+              ${{ needs.Continuous-Integration.outputs.image }}
+  
+            echo "Verifying container is running..."
+            sleep 10
+            docker ps | grep medical-chatbot || exit 1
